Added nicer CLI arguments. Made spoke lengths shorter.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,10 @@ find_package(LIBIGL REQUIRED QUIET)
 find_package(VTK REQUIRED)
 include(${VTK_USE_FILE})
 
+# adding cxxopts
+add_subdirectory(cxxopts)
+
 # Add your project files
 file(GLOB SRCFILES *.cpp)
 add_executable(${PROJECT_NAME} ${SRCFILES})
-target_link_libraries(${PROJECT_NAME} igl::core igl::opengl_glfw igl::opengl_glfw_imgui ${VTK_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} igl::core igl::opengl_glfw igl::opengl_glfw_imgui ${VTK_LIBRARIES} cxxopts)
